--- a/css/style.css
+++ b/css/style.css
@@ -74,4 +74,7 @@ body {
 .error {
   color: #E63946;
   margin-top: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem; 
+  text-shadow: 2px 2px 5px #1D3557;
 }
